2001-10-02  Damon Chaplin  <damon@ximian.com>

	* apps.html: commented out a few broken links, and updated a few.
	I didn't manage to check through many, though.

2001-08-22  Damon Chaplin  <damon@ximian.com>

	* index.html: added link to Spanish translation of FAQ.

	* apps.html: updated Lycadican link & added several new apps.

2001-07-13  Damon Chaplin  <damon@ximian.com>

	* apps.html: added 2 more apps.

2001-06-25  Damon Chaplin  <damon@ximian.com>

	* FAQ: fixed link to http://glade.gnome.org

2001-06-21  Damon Chaplin  <damon@ximian.com>

	* index.html: added link to new French translation of FAQ.

	* apps.html: added Intra Chat.

2001-06-14  Damon Chaplin  <damon@ximian.com>

	* FAQ: sync'ed with FAQ in glade.

2001-05-19  Damon Chaplin  <damon@ximian.com>

	* apps.html: added gsensor.

2001-05-14  Damon Chaplin  <damon@ximian.com>

	* apps.html: added 3 new apps.

2001-04-27  Damon Chaplin  <damon@ximian.com>

	* index.html: 
	* apps.html: added news item and apps link to Progeny Debian, which
	uses Glade.

2001-04-21  Damon Chaplin  <damon@ximian.com>

	* index.html: added news items for 0.6.2 and the website move.

	* history.html: added news items for 0.6.0 to 0.6.2.

2001-04-21  Damon Chaplin  <damon@ximian.com>

	* download.html: updated links to tarballs, which are now on the GNOME
	ftp server only.

2001-04-19  Damon Chaplin  <damon@ximian.com>

	* Initial import of Glade web site.
