@@ -654,6 +654,12 @@ a cryptanalysis toolkit.
 a tool for cd burning, mastering, ripping and audio compression.
 </ul>
 
+<ul>
+<li><a href="http://sourceforge.net/projects/dsql">dSQL</a> -
+a simple multi-database query tool just like Microsoft Query Analizer.
+Uses Gtk-PERL.
+</ul>
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
