@@ -150,6 +150,12 @@ and another for the non-free Allegro Common Lisp platform, available
 <a href="http://www.cs.uit.no/~frodef/sw/cl-glade/">here</a>.
 <BR><BR></li>
 
+<li><a href="http://www.ruby-lang.org/en/raa-list.rhtml?name=Ruby%2FLibGlade">
+Ruby bindings for libglade</a>. See also the <a href = "http://ruby-lang.org">
+Ruby home page</a>.<BR><BR></li>
+
+
+
 <li><a href="http://gide.pn.org">gIDE</a>:
 GTK+ Integrated Development Environment, which will
 hopefully be integrated with Glade at some
